Make GradleException implement ResolutionProvider
Centralize resolution providing capabilities within the base GradleException class.

This change reduces boilerplate by removing redundant ResolutionProvider implementations from numerous subclasses, allowing all GradleException instances to inherently carry resolution suggestions. It improves consistency and simplifies the management of user-facing advice in exceptions.